[package]
name = "claves"
version = "0.1.0"
edition = "2021"
authors = ["selyatinismet@gmail.com"]
license = "MIT"
keywords = ["keyboard", "mouse", "input"]
categories = ["accessibility", "api-bindings"]
description = "A library for capturing Keystrokes and Mouse clicks on Linux, MacOS and Windows."
readme = "README.md"
homepage = "https://github.com/Selyatin/claves"
repository = "https://github.com/Selyatin/claves"

[dependencies]
crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
core-graphics = "0.22.3"
apple-sys = { version = "0.1.2", features = ["Carbon"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["impl-default", "winuser", "processthreadsapi"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
accessibility-sys = "0.1.3"

[profile.release]
lto = true
strip = "symbols"
